# fastapi_template

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  tsconfig.json
.githooks/: pre-commit
app/: __init__.py  __main__.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  gui.py  user.py  utils.py
app/config/: config.dev.json  config.prod.json  dev.json  logging.dev.json  logging.prod.json
app/core/: __init__.py  app.py  config.py  database.py  dependencies.py  exceptions.py  lifespan.py  logging.py
app/crud/: user.py
app/database/: __init__.py  database.py  dependencies.py
app/gui/v1/: gui.py
app/gui/v1/endpoints/: __init__.py  home.py
app/schemas/: __init__.py  config.py  tags.py  user.py
app/security/: __init__.py  dependencies.py  security.py
app/services/: __init__.py  config.py  dependencies.py  static.py  templates.py  worker.py
deploy/: docker.yaml  dockerfile
frontend/: index.html  tsconfig.json
frontend/components/: mb-button.ts  styled-button.ts  styled-table.ts
frontend/static/: components.js
frontend/templates/: _base.html  demo.html  home.html
test/: _testcase.py  api_test.py  api_v1_test.py  base_test.py  core_test.py  crud_test.py  database_test.py  exceptions_test.py  services_test.py  testcase.py
